--- a/action.yml
+++ b/action.yml
@@ -7,7 +7,7 @@ runs:
       with:
         go-version: '1.20.4'
 
-    - run: go run ${{ github.action_path }}/main.go
+    - run: go run ${{ github.action_path }}/main.go --
       shell: bash
 branding:
   icon: 'lock'
