--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,10 @@
 name: 'Alert Manager'
 description: 'Create an issue when a new alert is created'
+inputs:
+  token:
+    description: 'Token to use for authentication'
+    required: true
+    default: ''
 runs:
   using: composite
   steps:
@@ -7,7 +12,7 @@ runs:
       with:
         go-version: '1.20.4'
 
-    - run: go run ${{ github.action_path }}/main.go
+    - run: GITHUB_TOKEN=${{ inputs.who-to-greet }} go run ${{ github.action_path }}/main.go
       shell: bash
 branding:
   icon: 'lock'
