--- a/action.yml
+++ b/action.yml
@@ -12,7 +12,7 @@ runs:
       with:
         go-version: '1.20.4'
 
-    - run: GITHUB_TOKEN=${{ inputs.who-to-greet }} go run ${{ github.action_path }}/main.go
+    - run: GITHUB_TOKEN=${{ inputs.token }} go run ${{ github.action_path }}/main.go
       shell: bash
 branding:
   icon: 'lock'
